# TMAU-2025

./: README.md
trunk/as06602/task01/src/: main.cpp
trunk/as06602/task_02/doc/: readme.md
trunk/as06602/task_02/src/: CMakeLists.txt  main.cpp  model.cpp  model.h
trunk/as06602/task_02/test/: CMakeLists.txt  test_model.cpp
